Refactor startup properties